Update resolution labels to match Camera Module 3 native modes

--- a/garage_cam_template.html
+++ b/garage_cam_template.html
@@ -470,7 +470,9 @@
                         <span>Resolution</span>
                     </div>
                     <select id="resolution" onchange="applyResolution()">
-                        <option value="640x480">640x480 (SD)</option>
+                        <option value="1920x1080">1920x1080 (Full HD - 1080p)</option>
+                        <option value="1280x720">1280x720 (HD - 720p)</option>
+                        <option value="640x480">640x480 (VGA)</option>
                         <option value="320x240" selected>320x240 (QVGA)</option>
                     </select>
                 </div>
