--- a/landing.html
+++ b/landing.html
@@ -105,7 +105,7 @@
         }
         
         .mode-features li {
-            color: #a0a0a0;
+            color: #b0b0b0;
             margin-bottom: 10px;
             padding-left: 25px;
             position: relative;
