--- a/landing.html
+++ b/landing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Camera Control - Select Mode</title>
+    <title>picamctl - Select Mode</title>
     <style>
         * {
             margin: 0;
@@ -150,7 +150,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🎥 Camera Control</h1>
+            <h1>🎥 picamctl</h1>
             <p>Choose your streaming mode</p>
         </div>
         
