--- a/vlc_stream.html
+++ b/vlc_stream.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VLC Streaming Mode</title>
+    <title>picamctl - VLC Streaming</title>
     <style>
         * {
             margin: 0;
